[package]
name = "wrapcenum-derive"
version = "0.3.0"
authors = ["Cldfire"]
description = "Derive macro for nvml-wrapper, not for general use"
readme = "README.md"
repository = "https://github.com/Cldfire/wrapcenum-derive"
license = "MIT/Apache-2.0"

[dependencies]
syn = "0.11"
quote = "0.3"

[lib]
proc-macro = true